Update workbench